# recovery_tool

./: .env  .env.example  .metadata  README.md  ffigen.yaml  librecovery.dylib  pubspec.yaml
.artifacts/20260720-185151-5ba750dc-c0a3-4401-a31f-bf5d4677bac9/: task.artifact.md
assets/test/eo1/: narrative.txt  report.xml
documents/: technical_documentation.md
integration_test/: e01_recovery_test.dart  recovery_integration_test.dart
lib/: main.dart  preview_screen.dart  recovery_screen.dart  scan_screen.dart  scan_view.dart
lib/core/ffi/: recovery_bindings.dart  recovery_bindings_generated.dart
lib/core/models/: recovery_event.dart
lib/core/providers/: locale_provider.dart
lib/core/service/: api_service.dart  encryption_service.dart  photorec_runner.dart  premium_service.dart  recovery_service.dart  storage_service.dart  thumbnail_service.dart
lib/core/theme/: app_theme.dart
lib/core/utils/: l10n_utils.dart
lib/features/config/: config_screen.dart  config_view.dart
lib/features/conversion/: conversion_screen.dart  conversion_view.dart
lib/features/onboarding/: onboarding_screen.dart
lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_vi.dart  app_vi.arb
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: MainFlutterWindow.swift
macos/Runner.xcodeproj/: project.pbxproj
native/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  librecovery.dylib
native/src/: CMakeCache.txt  carver.c  carver.h  device_handlers.c  device_handlers.h  e01_handler.c  exfat_parser.c  exfat_parser.h  fat32_parser.c  fat32_parser.h  fragment_validator.c  fragment_validator.h  hardware_health_checker.c  hardware_health_checker.h  partition_detector.c  partition_detector.h  platform_config.h  recovery_ffi.c  recovery_ffi.h  sector_reader.c  sector_reader.h  shared_types.h  signature_registry.c  signature_registry.h  smart_assembler.c  smart_assembler.h  test_fragment_validator.c  video_repair.c  video_repair.h  walkthrough.artifact.md
native/tests/: test_partition_detector.c
test/: api_service_test.dart  dev_license_bypass_test.dart  e01_conversion_test.dart  encryption_service_test.dart  photorec_parser_test.dart  premium_service_test.dart  storage_service_test.dart  verify_recovery.dart  widget_test.dart
test/utils/: e01_test_utils.dart
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp  win32_window.cpp
(+15 files in other folders)
